--- a/app/views/conceptos/_concepto.html.erb
+++ b/app/views/conceptos/_concepto.html.erb
@@ -13,6 +13,7 @@
           <th class= "actions">Fórmula Patrono</th>
           <th class= "actions">Modalidad de pago</th>
           <th class= "actions">Fecha de Creación</th>
+          <th class= "actions">Vigencia</th>
           <th class= "actions" style= "width: 100px;">Acciones</th>
         </tr>
       </thead>
@@ -30,6 +31,15 @@
             quincena=(concepto.created_at.day <=15)?0:1
           %>
           <td><%= $dic["quincena"].key(quincena).capitalize+'('+concepto.created_at.strftime("#{$dic["meses"].key($ahora.month)}-%Y")+') '%></td>
+<%
+vigencia= if concepto.fecha_fin.nil? ==true
+        "Indefinido..."
+      else
+concepto.fecha_fin
+ end
+%>
+          <td><%=vigencia%></td>
+
           <td>
             <%= render 'layouts/actions', x: Concepto, y: edit_concepto_path(concepto), z: concepto %>
           </td>
