--- a/app/views/departamentos/_form.html.erb
+++ b/app/views/departamentos/_form.html.erb
@@ -23,7 +23,7 @@
               <span class="fa fa-building-o"></span>
             </span>
             <% if f.object.dependencia_id=f.object.dependencia_id ? f.object.dependencia_id : 0%>
-            <%  d =(Departamento._attr_readonly.include?("dependencia_id") and f.object.dependencia_id.nil? == false) ? "disabled" : " "%>
+            <%  d =(Departamento._attr_readonly.include?("dependencia_id") and f.object.id.nil? == false) ? "disabled" : " "%>
 
             <%= f.select(:dependencia_id, options_for_select(Dependencia.all.map{|s|[s.nombre, s.id]}, f.object.dependencia_id),{include_blank:'Seleccione una Dependencia...'},class: "form-control","#{d}": true)  %></span>
           <%end%>
