--- a/app/views/personas/_registroconcepto_fields.html.erb
+++ b/app/views/personas/_registroconcepto_fields.html.erb
@@ -19,7 +19,7 @@
         <span class="input-group-addon">
           <span class="fa fa-align-justify"></span>
         </span>
-        <%  d =(Registroconcepto._attr_readonly.include?("conceptopersonal_id") and f.object.conceptopersonal_id.nil? == false) ? "disabled" : " "%>
+        <%  d =(Registroconcepto._attr_readonly.include?("conceptopersonal_id") and f.object.id.nil? == false) ? "disabled" : " "%>
 
         <%= f.select(:conceptopersonal_id, options_for_select(Conceptopersonal.all.map{|s|[s.nombre, s.id]},f.object.conceptopersonal_id),{include_blank:'Seleccione un concepto...'}, class: 'form-control',"#{d}": true)  %>
       </div>
@@ -30,7 +30,7 @@
         <span class="input-group-addon">
           <span class="fa fa-calendar-o"></span>
         </span>
-        <%  d =(Registroconcepto._attr_readonly.include?("modalidad_de_pago") and f.object.modalidad_de_pago.nil? == false) ? "disabled" : " "%>
+        <%  d =(Registroconcepto._attr_readonly.include?("modalidad_de_pago") and f.object.id.nil? == false) ? "disabled" : " "%>
 
     <%= f.select(:modalidad_de_pago, options_for_select($dic["modalidad_de_pago"],f.object.modalidad_de_pago),{include_blank: 'Seleccione una modalidad de pago...'},class: "form-control","#{d}": true)  %>
       </div>
