--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -549,3 +549,9 @@ p {
   -o-transition-property: height, visibility;
   transition-property: height, visibility;
 }
+.popover-title {
+    text-align: center;
+}
+.popover-content{
+    text-align: center;
+}
