--- a/app/views/cargos/_form.html.erb
+++ b/app/views/cargos/_form.html.erb
@@ -24,7 +24,8 @@
             </span>
             <%  d =(Cargo._attr_readonly.include?("departamento_id") and f.object.id.nil? == false) ? "disabled" : " "%>
 
-            <%= f.select(:departamento_id, options_for_select(Departamento.all.map{|s|[s.nombre, s.id]}, f.object.departamento_id),{include_blank:'Seleccione un departamento...'},class: "form-control","#{d}": true)  %>
+            <%= f.select(:departamento_id, options_for_select(Departamento.all.map{|s|[s.nombre, s.id]}, f.object.departamento_id),{include_blank:'Seleccione un departamento...'},class: "form-control","data-toggle"=>"popover", "data-trigger"=>"focus", "data-placement"=>"top", title: "Departamento",
+            "data-content"=>"Este campo no podrá ser editado despúes de guardar.","#{d}": true)  %>
           </div>
         </div>
         <div class="col-xs-6">
@@ -35,7 +36,8 @@
             </span>
             <%  d =(Cargo._attr_readonly.include?("tipo_id") and f.object.id.nil? == false) ? "disabled" : " "%>
 
-            <%= f.select(:tipo_id, options_for_select(Tipo.all.map{|s|[s.nombre, s.id]}, f.object.tipo_id),{include_blank:'Seleccione una nómina...'},class: "form-control","#{d}": true)  %>
+            <%= f.select(:tipo_id, options_for_select(Tipo.all.map{|s|[s.nombre, s.id]}, f.object.tipo_id),{include_blank:'Seleccione una nómina...'},class: "form-control","data-toggle"=>"popover", "data-trigger"=>"focus", "data-placement"=>"top", title: "Nómina",
+            "data-content"=>"Este campo no podrá ser editado despúes de guardar.","#{d}": true)  %>
           </div>
         </div>
         <%= f.fields_for :sueldos  do |sueldo_builder|  %>
@@ -67,3 +69,8 @@
   </div>
 </div>
 <% end %>
+<script>
+$(function () {
+  $('[data-toggle="popover"]').popover();
+});
+</script>
