--- a/app/views/departamentos/_form.html.erb
+++ b/app/views/departamentos/_form.html.erb
@@ -25,7 +25,8 @@
             <% if f.object.dependencia_id=f.object.dependencia_id ? f.object.dependencia_id : 0%>
             <%  d =(Departamento._attr_readonly.include?("dependencia_id") and f.object.id.nil? == false) ? "disabled" : " "%>
 
-            <%= f.select(:dependencia_id, options_for_select(Dependencia.all.map{|s|[s.nombre, s.id]}, f.object.dependencia_id),{include_blank:'Seleccione una Dependencia...'},class: "form-control","#{d}": true)  %></span>
+            <%= f.select(:dependencia_id, options_for_select(Dependencia.all.map{|s|[s.nombre, s.id]}, f.object.dependencia_id),{include_blank:'Seleccione una Dependencia...'},class: "form-control","data-toggle"=>"popover", "data-trigger"=>"focus", "data-placement"=>"top", title: "Dependencia",
+            "data-content"=>"Este campo no podrá ser editado despúes de guardar.","#{d}": true)  %></span>
           <%end%>
         </div>
       </div>
@@ -35,3 +36,8 @@
 </div>
 </div>
 <%end%>
+<script>
+$(function () {
+  $('[data-toggle="popover"]').popover();
+});
+</script>
