--- a/app/views/personas/_familiar_fields.html.erb
+++ b/app/views/personas/_familiar_fields.html.erb
@@ -14,15 +14,6 @@
       </div>
     </div>
     <div class="col-sm-4">
-      <%= f.label :parentesco %>
-      <div class="form-group input-group">
-        <span class="input-group-addon">
-          <span class="fa fa-user"></span>
-        </span>
-        <%= f.select(:parentesco, options_for_select($dic["parentesco"],f.object.parentesco),{include_blank: 'Seleccione un sexo...'},class: "form-control" )  %>
-      </div>
-    </div>
-    <div class="col-sm-4">
       <%= f.label :nombres %>
       <div class="form-group input-group">
         <span class="input-group-addon">
@@ -38,6 +29,15 @@
           <span class="fa fa-align-justify"></span>
         </span>
         <%= f.text_field :apellidos,class: "form-control"  %>
+      </div>
+    </div>
+    <div class="col-sm-4">
+      <%= f.label :parentesco %>
+      <div class="form-group input-group">
+        <span class="input-group-addon">
+          <span class="fa fa-user"></span>
+        </span>
+        <%= f.select(:parentesco, options_for_select($dic["parentesco"],f.object.parentesco),{include_blank: 'Seleccione el parentesco...'},class: "form-control" )  %>
       </div>
     </div>
     <div class="col-sm-4">
@@ -58,7 +58,7 @@
         <%= f.select(:sexo, options_for_select($dic["sexos"],f.object.sexo ),{include_blank: 'Seleccione un sexo...'},class: "form-control"  ) %>
       </div>
     </div>
-    <div class="col-sm-4">
+    <div class="col-sm-12">
       <%= f.label :direccion %>
       <div class="form-group input-group">
         <span class="input-group-addon">
