--- a/app/views/personas/_personas.html.erb
+++ b/app/views/personas/_personas.html.erb
@@ -48,6 +48,6 @@
 </div>
 <%else%>
 <div class="actions">
-  <h4>"No hay empleados en esta seccion"</h4>
+  <h4>"No hay empleados en esta sección"</h4>
 </div>
 <%end%>
