--- a/app/views/conceptos/_form.html.erb
+++ b/app/views/conceptos/_form.html.erb
@@ -12,18 +12,21 @@
           <span class="input-group-addon">
             <span class="fa fa-align-justify"></span>
           </span>
-          <%= f.text_field :nombre, class: "form-control", autofocus: "" %>
+          <%  d =(Concepto._attr_readonly.include?("nombre") and f.object.id.nil? == false) ? "disabled" : " "%>
+          <%= f.text_field :nombre, class: "form-control", autofocus: "","data-toggle"=>"popover", "data-trigger"=>"hover", "data-placement"=>"top", title: "Nombre",
+          "data-content"=>"Este campo no podrá ser editado despúes de guardar.", "#{d}": true %>
         </div>
       </div>
 
       <div class="col-xs-6">
-        <%= f.label :modalidad_de_pago  %>
+        <%= f.label :modalidad_de_pago%>
         <div class="form-group input-group">
           <span class="input-group-addon">
             <span class="fa fa-calendar-o"></span>
           </span>
           <%  d =(Concepto._attr_readonly.include?("modalidad_de_pago") and f.object.id.nil? == false) ? "disabled" : " "%>
-          <%= f.select(:modalidad_de_pago , options_for_select($dic["modalidad_de_pago"], f.object.modalidad_de_pago),{include_blank:'Seleccione una modalidad de pago...'},class: "form-control","#{d}": true)  %>
+          <%= f.select(:modalidad_de_pago , options_for_select($dic["modalidad_de_pago"], f.object.modalidad_de_pago),{include_blank:'Seleccione una modalidad de pago...'},class: "form-control","data-toggle"=>"popover", "data-trigger"=>"focus", "data-placement"=>"top", title: "Modalidad de pago",
+          "data-content"=>"Este campo no podrá ser editado despúes de guardar.","#{d}": true) %>
         </div>
       </div>
       <div class="col-xs-6">
@@ -34,7 +37,8 @@
           </span>
           <%  d =(Concepto._attr_readonly.include?("tipo_de_concepto") and f.object.id.nil? == false) ? "disabled" : " "%>
 
-          <%= f.select(:tipo_de_concepto , options_for_select($dic["tipos_de_conceptos"], f.object.tipo_de_concepto),{include_blank:'Seleccione un tipo de concepto...'},class: "form-control","#{d}": true)  %>
+          <%= f.select(:tipo_de_concepto , options_for_select($dic["tipos_de_conceptos"], f.object.tipo_de_concepto),{include_blank:'Seleccione un tipo de concepto...'},class: "form-control","data-toggle"=>"popover", "data-trigger"=>"focus", "data-placement"=>"top", title: "Tipo de concepto",
+          "data-content"=>"Este campo no podrá ser editado despúes de guardar.","#{d}": true)  %>
         </div>
 
       </div>
@@ -46,7 +50,8 @@
           </span>
           <%  d =(Concepto._attr_readonly.include?("condicion") and f.object.id.nil? == false) ? "disabled" : " "%>
 
-          <%= f.select(:condicion, options_for_select($dic["condiciones"], f.object.condicion),{include_blank:'Seleccione una condición...'},class: "form-control","#{d}": true)  %>
+          <%= f.select(:condicion, options_for_select($dic["condiciones"], f.object.condicion),{include_blank:'Seleccione una condición...'},class: "form-control","data-toggle"=>"popover", "data-trigger"=>"focus", "data-placement"=>"top", title: "Condición",
+          "data-content"=>"Este campo no podrá ser editado despúes de guardar.","#{d}": true)  %>
         </div>
 
       </div>
@@ -195,5 +200,9 @@
     colorear($(".code")[0]);
     colorear($(".code")[1]);
 
+  });
+
+  $(function () {
+    $('[data-toggle="popover"]').popover();
   });
 </script>
