--- a/app/views/conceptos/show.html.erb
+++ b/app/views/conceptos/show.html.erb
@@ -1,76 +1,80 @@
 <div class="page-header">
-  <h1><%= @concepto.nombre %></h1>
+    <h1><%= @concepto.nombre %></h1>
 </br>
-  <h4><b>Tipo de concepto:</b>
-<%= $dic['tipos_de_conceptos'].key(@concepto.tipo_de_concepto).upcase %>,
+<h4>
+    <b>Tipo de concepto:</b>
+    <%= $dic['tipos_de_conceptos'].key(@concepto.tipo_de_concepto).upcase %>,
     <b>Modalidad de pago:</b>
     <%= $dic['modalidad_de_pago'].key(@concepto.modalidad_de_pago).upcase %>,
     <b>Condición para aplicar:</b>
     <%= $dic['condiciones'].key(@concepto.condicion).upcase %>.</h4>
-    <h4><b>Nóminas en las cuales se aplica: </b>
+<h4>
+    <b>Nóminas en las cuales se aplica:
+    </b>
     <% @concepto.tipos.each do |tipo|
       %>
     <span class="label label-info"><%= tipo.nombre%></span>
-      <% end%>
+    <% end%></h4>
 
-          <%
-          vigencia= if @concepto.fecha_fin.nil? ==true
-                  "Indefinido..."
-                else
-          @concepto.fecha_fin
-           end
-          %>
+<%
+    vigencia= if @concepto.fecha_fin.nil? ==true
+    "Indefinido"
+              else
+             @concepto.fecha_fin.strftime("%d-%m-%Y")
+              end
+%>
 
-          <h4>Vigencia: <%=vigencia%></h4>
-          <%if @concepto.eliminable==true and (current_usuario.has_role?:coordinador) %>
-          <%= link_to raw('<i class="fa fa-trash"></i> Eliminar'), concepto_path(@concepto)+"?destroy=1","data-method": "get","data-confirm": "Are you sure?", class: "btn btn-danger"%>
-            <% else%>
-            <%if @concepto.desactivable==true and @concepto.fecha_fin.nil? ==true %>
-            <%= link_to raw('<i class="fa fa-ban"></i> Desactivar'), concepto_path(@concepto)+"?disable=1","data-method": "get", "data-confirm": "Esta seguro una vez desactivado, no podra ser habilidato de nuevo?\n*Este concepto aplicara hasta la quincena pasada.", class: "btn btn-danger"%>
-              <% end%>
-                <% end%>
-
-</h4>
+<h4>
+    <b>Vigencia:</b>
+    <%=vigencia%>
+    <%if @concepto.eliminable==true and (current_usuario.has_role?:coordinador) %>
+    <%= link_to raw('<i class="fa fa-trash"></i> Eliminar'), concepto_path(@concepto)+"?destroy=1","data-method": "get","data-confirm": "¿Está seguro que desea realizar esta acción?", class: "btn btn-danger pull-right"%>
+<% else%>
+    <%if @concepto.desactivable==true and @concepto.fecha_fin.nil? ==true %>
+    <%= link_to raw('<i class="fa fa-ban"></i> Desactivar'), concepto_path(@concepto)+"?disable=1","data-method": "get", "data-confirm": "¿Está seguro que desea realizar esta acción? Una vez desactivado el concepto, no podrá ser habilidato nuevamente?
+    *Este concepto aplicará hasta la quincena pasada.", class: "btn btn-danger pull-right"%>
+    <% end%>
+    <% end%></h4>
 
 </div>
 
 <ul class="list-group">
-  <li class="list-group-item text-muted" contenteditable="false">Fórmulas</li>
-  <li class="list-group-item text-center">
+<li class="list-group-item text-muted" contenteditable="false">Fórmulas</li>
+<li class="list-group-item text-center">
     <div class="table-responsive">
-      <table class="table table-hover table-responsive table-condensed table-bordered">
-        <thead>
-          <tr>
-            <th class="actions">Fórmula empleado</th>
-            <th class="actions">Fórmula aporte del empleador</th>
-            <th class="actions">Fecha de vigencia</th>
-            <th class="actions" style="width:20px">Activo</th>
-          </tr>
-        </thead>
+        <table class="table table-hover table-responsive table-condensed table-bordered">
+            <thead>
+                <tr>
+                    <th class="actions">Fórmula empleado</th>
+                    <th class="actions">Fórmula aporte del empleador</th>
+                    <th class="actions">Fecha de vigencia</th>
+                    <th class="actions" style="width:20px">Activo</th>
+                </tr>
+            </thead>
 
-        <tbody>
-          <% @concepto.formulas.order('activo DESC').each do |formula| %>
-          <tr class="<%= formula.activo ? 'success': 'danger'%>">
-            <td><%= formula.empleado %></td>
-            <td><%= formula.patrono %></td>
-            <%
+            <tbody>
+                <% @concepto.formulas.order('activo DESC').each do |formula| %>
+                <tr class="<%= formula.activo ? 'success': 'danger'%>">
+                    <td><%= formula.empleado %></td>
+                    <td><%= formula.patrono %></td>
+                    <%
             quincena=(formula.created_at.day<=15)? 0 : 1
             %>
-            <th class="actions"><%= formula.created_at.strftime("#{$dic['quincena'].key(quincena)} #{$dic['meses'].key(formula.created_at.month).capitalize}-%Y") %></th>
-            <th class="actions"><%if formula.activo %>
-              <span class="fa fa-check"></span>
-              <%else%>
-              <span class="fa fa-close"></span>
-              <%end%></th>
-          </tr>
-          <% end %>
-        </tbody>
-      </table>
+                    <th class="actions"><%= formula.created_at.strftime("#{$dic['quincena'].key(quincena)} #{$dic['meses'].key(formula.created_at.month).capitalize}-%Y") %></th>
+                    <th class="actions"><%if formula.activo %>
+                        <span class="fa fa-check"></span>
+                        <%else%>
+                        <span class="fa fa-close"></span>
+                        <%end%></th>
+                </tr>
+                <% end %>
+            </tbody>
+        </table>
     </div>
-  </li>
+</li>
 </ul>
 
 <div class="col-xs-12 actions"><br>
-  <%= link_to raw('<i class= "fa fa-pencil"></i> Editar'), edit_concepto_path(@concepto), class: "btn btn-success boton" %>
-  <%= link_to raw('<i class= "fa fa-arrow-circle-left"></i> Regresar'), conceptos_path, class: "btn btn-default boton" %>
+<%= link_to raw('<i class= "fa fa-pencil"></i> Editar'), edit_concepto_path(@concepto), class: "btn btn-success boton" %>
+<%= link_to raw('<i class= "fa fa-arrow-circle-left"></i> Regresar'), conceptos_path, class: "btn btn-default boton" %>
 </div>
