--- a/app/views/personas/_familiar_fields.html.erb
+++ b/app/views/personas/_familiar_fields.html.erb
@@ -4,14 +4,21 @@
     <div class="pull-right"><%=link_to_remove_association raw('<i class="fa fa-times"></i>'), f%></div>
   </div>
   <div class="panel-body">
-    <div class="col-sm-4">
+    <div class="col-sm-4 form-group">
       <%= f.label :cedula %>
-      <div class="form-group input-group">
+      <div class="input-group form-inline">
+        <span class="input-group-btn" >
+          <%  d =(Familiar._attr_readonly.include?("tipo_de_cedula") and f.object.id.nil? == false) ? "disabled" : " "%>
+
+          <%= f.select(:tipo_de_cedula, options_for_select($dic["tipos_de_cedula"], @persona.tipo_de_cedula),{},class: "btn btn-default dropdown-toggle",style: "padding:5.5px 12px;","#{d}": true) %>
+        </span>
+        <%  d =(Familiar._attr_readonly.include?("cedula") and f.object.id.nil? == false) ? "disabled" : " "%>
+        <%= f.telephone_field :cedula ,class: "form-control",label: false, error: "Campo obligarotio.",maxlength: "8", pattern:"[0-9]{8}","data-toggle"=>"popover", "data-trigger"=>"focus", "data-placement"=>"top", title: "Número de Cédula",
+        "data-content"=>"Este campo no podrá ser editado despúes de guardar.","#{d}": true %>
         <span class="input-group-addon">
           <span class="fa fa-user"></span>
         </span>
-        <%= f.text_field :cedula,class: "form-control",maxlength: "8", autofocus:"" %>
-      </div>
+    </div>
     </div>
     <div class="col-sm-4">
       <%= f.label :nombres %>
@@ -71,3 +78,8 @@
   </div>
 
 </div>
+<script>
+$(function () {
+  $('[data-toggle="popover"]').popover();
+});
+</script>
